--- a/Hourly_Data_Downloader.ipynb
+++ b/Hourly_Data_Downloader.ipynb
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,9 @@
       "Cleaning Data/ Folder\n",
       "Downloaded:  DELTA BURNS BOG\n",
       "Downloaded:  VANCOUVER INTL A\n",
-      "Downloaded:  VANCOUVER SEA ISLAND CCG\n"
+      "Downloaded:  VANCOUVER SEA ISLAND CCG\n",
+      "Downloaded:  WHITE ROCK CAMPBELL SCIENTIFIC\n",
+      "Download Complete\n"
      ]
     }
    ],
