--- a/Hourly_Data_Downloader.ipynb
+++ b/Hourly_Data_Downloader.ipynb
@@ -20,15 +20,14 @@
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
-    "# import os\n",
     "import folium\n",
     "import requests\n",
     "import os, shutil\n",
     "\n",
     "%matplotlib notebook\n",
     "\n",
-    "token = \"pk.eyJ1IjoianVuZXNwYWNlYm9vdHMiLCJhIjoiY2s4a285NTM1MDQwbDNocHozdXlkNzIyaSJ9.-_8gh9gG4VuprIPnmXBr3A\" # your mapbox token\n",
-    "tileurl = 'https://api.mapbox.com/v4/mapbox.satellite/{z}/{x}/{y}@2x.png?access_token=' + str(token)\n"
+    "# token = \"pk.eyJ1IjoianVuZXNwYWNlYm9vdHMiLCJhIjoiY2s4a285NTM1MDQwbDNocHozdXlkNzIyaSJ9.-_8gh9gG4VuprIPnmXBr3A\" # your mapbox token\n",
+    "# tileurl = 'https://api.mapbox.com/v4/mapbox.satellite/{z}/{x}/{y}@2x.png?access_token=' + str(token)\n"
    ]
   },
   {
